utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ConfigurationName.ide
package invalid

typedef module ConfigurationName {
    configuration config: CommonConfiguration {
        name "My Name is..."
    }
}
