utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencySubModule.ide
package invalid

typedef module CircularDependencySubModule {
    module sub: CircularDependencyModule
}
